# wechat-article-parser-mcp

./: .gitignore  API_FORMAT_UPDATE.md  CHANGELOG.md  CODE_UPDATES_SUMMARY.md  COMPARE_WITH_TEACHER.md  DEVELOPMENT.md  DIFFERENCES_FOUND.md  ENV_CONFIG_UPDATE.md  FINAL_FIXES.md  FINAL_SOLUTION.md  NEXT_STEPS.md  PUSH_STATUS.md  PUSH_TO_GITHUB.md  QUICK_START.md  README.md  README_IMAGE_GENERATOR.md  SETUP_SSH.md  SSH_PUBLIC_KEY.txt  SSH_QUICK_GUIDE.md  SUBMISSION.md  TROUBLESHOOTING.md  WECHAT_PARSER_COMPLETE.md  ai_drawing_server.py  check_cursor_chat_db.py  commit_and_push.sh  create_file.py  cursor_chat_export_20251105_120818.md  cursor_chat_helper.md  cursor三种模式使用指南.md  cursor创建create pr和review功能说明1.md  cursor升级说明.md  cursor设置修复说明1.md  debug_api_comprehensive.py  env.example  export_cursor_chat.py  extract_cursor_chat.py  find_correct_model.py  fix_cursor.md  fix_cursor_settings.sh  list_models.py  (+26 more)
src/seedream_image_generator/: README.md  __init__.py  pyproject.toml  server.py
src/wechat_article_parser/: ALTERNATIVE_START.md  BEST_SOLUTION.md  CLEAN_START.md  CONNECTION_FIX.md  CORRECT_CONFIG.md  CURSOR_CONFIG.md  CURSOR_SETUP.md  FINAL_RECOMMENDATION.md  FINAL_SOLUTION.md  FIX_CONFIG_NOW.md  GITHUB_SETUP.md  IMPORTANT_PORTS.md  IMPORT_FIX.md  MCP_INSPECTOR_CONFIG.md  MCP_INSPECTOR_FIX.md  MCP_INSPECTOR_INPUT_FORMAT.md  MCP_INSPECTOR_MANUAL_SETUP.md  MCP_INSPECTOR_TROUBLESHOOTING_SUMMARY.md  PORT_FIX.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  PROXY_ADDRESS_FIX.md  PROXY_ERROR_FIX.md  QUICK_CONFIG_FIX.md  QUICK_FIX.md  QUICK_INSTALL.md  QUICK_START.md  README.md  (+12 more)
(+29 files in other folders)
