[project]
name = "seedream-image-generator"
version = "0.1.0"
description = "MCP Server for Seedream 4.0 Image Generation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.32.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


