[project]
name = "wechat-article-parser"
version = "0.1.0"
description = "MCP Server for WeChat Public Account Article Parsing"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wechat_article_parser"]

